// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";
package thanos;

option go_package = "labelpb";

message Label {
    string name  = 1;
    string value = 2;
}

message LabelSet {
    repeated Label labels = 1;
}